# avreertos-plusplus

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  uart.c  uart.h
cmake/: avr_gcc_toolchain.cmake
freertos_config/: FreeRTOSConfig.h
